--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --inspect index.js",
+    "watch": "node-sass --watch resources/scss/ --output public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/thoangtran20/NodeJS_Interrn#readme",
   "devDependencies": {
     "morgan": "^1.10.0",
+    "node-sass": "^7.0.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
