--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect index.js",
-    "watch": "node-sass --watch resources/scss/ --output public/css/",
+    "watch": "node-sass --watch ./src/resources/scss/ --output ./src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,10 +23,23 @@
     "url": "https://github.com/thoangtran20/NodeJS_Interrn/issues"
   },
   "homepage": "https://github.com/thoangtran20/NodeJS_Interrn#readme",
+
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tag-width 4 --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"  
+    }
+  }
+
   "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.4",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   },
   "dependencies": {
     "ejs": "^3.1.6",
