--- a/package.json
+++ b/package.json
@@ -23,16 +23,14 @@
     "url": "https://github.com/thoangtran20/NodeJS_Interrn/issues"
   },
   "homepage": "https://github.com/thoangtran20/NodeJS_Interrn#readme",
-
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tag-width 4 --write"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"  
+      "pre-commit": "lint-staged"
     }
-  }
-
+  },
   "devDependencies": {
     "husky": "^7.0.4",
     "lint-staged": "^12.1.4",
@@ -43,6 +41,7 @@
   },
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.1.3"
   }
 }
